--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "funding",
     "nft"
   ],
-  "author": "flair.foundation",
+  "author": "0xflair",
   "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.7",
