--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,13 @@
 {
-  "root": true,
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module"
-  },
+  "parser": "babel-eslint",
   "env": {
-    "commonjs": true,
-    "jest": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "rules": {
-    "no-empty": "off",
-    "no-empty-function": "off"
+    "global-require": "off",
+    "no-use-before-define": ["error", { "functions": false }],
+    "class-methods-use-this": "off"
   }
 }
