--- a/package.json
+++ b/package.json
@@ -22,6 +22,17 @@
     "funding",
     "nft"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ]
+  },
   "author": "0xflair",
   "license": "MIT",
   "devDependencies": {
@@ -34,18 +45,25 @@
     "@truffle/hdwallet-provider": "^1.2.6",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "ethereum-waffle": "^3.3.0",
+    "ethereumjs-abi": "^0.6.8",
+    "ethereumjs-util": "^6.2.1",
     "ethers": "^5.1.4",
     "hardhat": "^2.1.2",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.7.5",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-gas-reporter": "^1.0.4",
+    "lint-staged": "^11.1.1",
     "lodash": "^4.17.21",
     "prettier": "^2.3.0",
     "prettier-plugin-solidity": "^1.0.0-beta.10",
