--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@0xflair/finance-contracts",
-  "version": "1.0.0",
-  "description": "Smart contracts running the Flair Finance platform.",
+  "version": "0.1.0",
+  "author": "0xflair",
+  "license": "AGPL-3.0",
+  "description": "Programmable and Fluid Fundraising Platform.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"**/*.{js,ts}\" && solhint src/**/*.sol",
@@ -33,8 +35,6 @@
       "eslint"
     ]
   },
-  "author": "0xflair",
-  "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.7",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
