--- a/.github/workflows/deploy-rinkeby.yml
+++ b/.github/workflows/deploy-rinkeby.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - run: npm ci
+      - run: yarn
       - run: npx hardhat deploy --network rinkeby
         env:
           UNISWAP_ROUTER_ADDR: '0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D'
