--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.8",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^2.1.5",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.2.0",
@@ -58,7 +59,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^6.2.1",
-    "ethers": "^5.4.5",
+    "ethers": "^5.4.7",
     "hardhat": "^2.6.1",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.7.11",
