--- a/.github/workflows/deploy-rinkeby.yml
+++ b/.github/workflows/deploy-rinkeby.yml
@@ -17,11 +17,11 @@ jobs:
       - run: yarn
       - run: npx hardhat deploy --network rinkeby
         env:
-          UNISWAP_ROUTER_ADDR: '0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D'
           INFURA_PROJECT_ID: '9a22fd6b68e941aa91a9df7258be9853'
-          GAS_PRICE: '5500000000'
           DEPLOYER_PRIVATE_KEY: '${{ secrets.RINKEBY_DEPLOYER_PRIVATE_KEY }}'
-          ETHERSCAN_API_KEY: '${{ secrets.RINKEBY_ETHERSCAN_API_KEY }}'
+          RINKEBY_GAS_PRICE: '5500000000'
+          RINKEBY_ETHERSCAN_API_KEY: '${{ secrets.RINKEBY_ETHERSCAN_API_KEY }}'
+          RINKEBY_UNISWAP_ROUTER_ADDR: '0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D'
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: '[skip ci] Update rinkeby deployment snapshot'
