--- a/.github/workflows/contracts-tests.yml
+++ b/.github/workflows/contracts-tests.yml
@@ -19,6 +19,6 @@ jobs:
       - run: yarn
       - run: npx hardhat test --network hardhat
         env:
-          UNISWAP_ROUTER_ADDR: '0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D'
           INFURA_PROJECT_ID: '9a22fd6b68e941aa91a9df7258be9853'
-          GAS_PRICE: '5500000000'
+          RINKEBY_GAS_PRICE: '5500000000'
+          RINKEBY_UNISWAP_ROUTER_ADDR: '0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D'
